# Ares

./: .README.md.swp  .gitattributes  .gitignore  0001-Example-for-exiting-the-search-on-human-checker-succ.patch  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  astar_human_checker_exit_example.patch  config  ctf-platforms.local.md  ctf-room-inventory.generated.md  ctf-room-inventory.local.md  deny.toml  justfile  out.txt  output.txt  repomix-output.txt  tmp_247ctf_dashboard.html  tmp_247ctf_packed.js  tmp_247ctf_type_1.json  tmp_247ctf_type_3.json  tmp_247ctf_type_4.json  tmp_247ctf_type_5.json  tmp_247ctf_type_6.json  tmp_247ctf_type_8.json  tmp_247ctf_type_9.json  tmp_blog_baseic_encoding.html  tmp_blog_claus_huntress2024.html  tmp_blog_cyberyoddha.html  tmp_blog_h0j3n_nahamcon2021.html  tmp_blog_hacktober2020.html  tmp_blog_sylvie_huntress2024.html  tmp_blog_tresscross_huntress2024.html  tmp_blog_vipin_huntress2024.html  tmp_cmdchallenge.html  tmp_cmdchallenge_index.js  tmp_ctf_encoding_blog_report.json  tmp_ctf_encoding_blog_report_2.json  (+20 more)
.config/: nextest.toml
.github/: build.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: proposal--large-feature--large-idea-.md  technical-debt.md
.github/workflows/: codespell.yml  dependabot-auto-merge.yml  pull_request.yml  pythonBlack.yml  quickstart.yml  release-builds.yml  release.yaml  release.yml  stalePRS.yml
_staging_anitools/: README.md  anitools.py
ares_cli/: Cargo.toml
ares_cli/src/: main.rs
ares_cli/tests/: integration_test.rs
ares_cli/tests/test_fixtures/: README.md  rot13_base64_hex_with_newline
ares_lib/: Cargo.toml  justfile
ares_lib/src/: api_library_input_struct.rs  lib.rs
ares_lib/src/checkers/: checker_type.rs  regex_checker.rs
ares_lib/src/cli_input_parser/: README.md  mod.rs
ares_lib/src/config/: readme.md
ares_lib/src/decoders/: base32_decoder.rs  base58_bitcoin_decoder.rs  base58_monero_decoder.rs  base58_ripple_decoder.rs  base64_decoder.rs  base65536_decoder.rs  binary_decoder.rs  mod.rs  reverse_decoder.rs
ares_lib/src/filtration_system/: mod.rs
ares_lib/src/searchers/: README.md
ares_lib/src/storage/dictionaries/: clean.py
benches/: benchmark_checkers.rs  benchmark_crackers.rs  benchmark_decoders.rs  benchmark_whole_program.rs
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/lib/: all.html  fn.test.html  index.html  sidebar-items.js
docs/: README.md  ares_architecture.md  ares_overview.md  astar.md  astar_algorithm_improvements.md  astar_decoder_specific_nodes.md  astar_human_checker_improvements.md  branching.md  config_file_implementation_plan.md  database_implementation.md  enhanced_detection.md  enhanced_detection_plan.md  first_run_implementation_plan.md  hash_crack_decoder_plan.md  implementation_plan_sensitivity.md  invisible_characters.md  package-managers.md  parallel_astar_implementation.md  parallel_astar_search.md  parallelization.md  plaintext_identification.md  potential_decoders.md  sensitivity.md  storage.md  tui_improvements_plan.md  using_ares.md  wait_athena.md
docs/archive/: astar_node_with_decoder_implementation_plan.md  database_implementation.md  enhanced_detection_plan.md  first_run_implementation_plan.md  parallel_astar_implementation_clarifications.md
docs/changes/: 2024-03-11-fix-duplicate-human-prompts.md  2024-03-21-add-vigenere-decoder.md  2024-07-01-wordlist-checker.md  2024-07-02-sensitivity-trait.md  2024-07-10-astar-refactor.md  2024-07-10-astar-simplified-heuristic-rewrite.md  2024-07-10-astar-simplified-heuristic.md  2024-07-10-improve-string-pruning.md  2024-07-10-remove-cipher-mapping.md  2024-07-10-remove-decoder-popularity.md  2024-07-10-wait-athena-checker.md  wordlist.md
docs/rules/: documentation.mdc
images/: README.md  better_demo.cast  decoding.tape  first_run.tape  lemmeknow.cast  main_demo.cast  repomix-output.txt
photos/: main_demo.cast
scripts/: generate_ctf_writeup_tests.py
src/: .gitattributes  api_library_input_struct.rs  build.rs  error.rs  lib.rs  main.rs
src/ai/: client.rs  error.rs  mod.rs  prompts.rs
src/checkers/: athena.rs  checkerObject.rs  checker_object.rs  checker_result.rs  checker_type.rs  default_checker.rs  english.rs  human_checker.rs  language_checker.rs  lemmeknow.rs  lemmeknow_checker.rs  mod.rs  password.rs  quadgrams.rs  readme.md  regex_checker.rs  wait_athena.rs  wordlist.rs
src/cli/: first_run.rs  mod.rs
src/cli_input_parser/: mod.rs
src/cli_pretty_printing/: README.md  mod.rs  tests.rs
src/config/: mod.rs
src/crackers/: README.md  mod.rs
src/decoders/: CrackObject.rs  README.md  a1z26_decoder.rs  affine_cipher.rs  ascii85_decoder.rs  atbash_decoder.rs  bacon_cipher_decoder.rs  baconian_decoder.rs  base32_decoder.rs  base32hex_decoder.rs  base45_decoder.rs  base58_bitcoin_decoder.rs  base58_flickr_decoder.rs  base58_monero_decoder.rs  base58_ripple_decoder.rs  base62_decoder.rs  base64_decoder.rs  base64_url_decoder.rs  base65536_decoder.rs  base8_decoder.rs  base91_decoder.rs  beaufort_decoder.rs  binary_decoder.rs  braille_decoder.rs  brainfuck_interpreter.rs  caesar_decoder.rs  citrix_ctx1_decoder.rs  crack_results.rs  decimal_decoder.rs  dictionary_decoder.rs  hash_decoder.rs  hexadecimal_decoder.rs  html_entity_decoder.rs  interface.rs  mod.rs  morse_code.rs  nato_phonetic_decoder.rs  octal_decoder.rs  punycode_decoder.rs  quoted_printable_decoder.rs  (+8 more)
src/filtration_system/: README.md  mod.rs
src/searchers/: README.md  astar.rs  bfs.rs  donot.rs  helper_functions.rs  lol.rs  mod.rs  (+1 more)
test-ledger/: faucet-keypair.json  genesis.tar.bz2  tower-7QYx1MjsoyHVLKrBGLbq3uQd39RTfmTaYStY9pVVMUQK.bin.new  validator-keypair.json  vote-account-keypair.json
tests/: ctf_writeups.rs  ctf_writeups_generated.rs  integration_new_decoders.rs  integration_test.rs  test_base64_caesar_chain.rs
tmp_subcheck/: ep02.ass  ep03.ass  ep04.ass  ep05.ass  ep06.ass  ep07.ass  ep08.ass  ep09.ass  ep10.ass  ep11.ass  ep12.ass  ep13.ass  ep14.ass  ep15.ass  ep16.ass  ep17.ass  ep18.ass  ep19.ass  ep20.ass  ep21.ass  ep22.ass  ep23.ass  ep24.ass  ep25.ass  ep26.ass
(+967 files in other folders)
