[package]
name = "ciphey"
repository = "https://github.com/bee-san/ciphey"
version = "0.12.0"
edition = "2021"
description = "Automated decoding tool, Ciphey but in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ciphey"
path = "src/lib.rs"
bench = false

[[bin]]
name = "ciphey"
path = "src/main.rs"
bench = false

# Please keep this list in alphabetical order
[dependencies]
ansi_term = "0.12.1"
clap = {version = "4.5.32", features = ["derive"]}
crossbeam = "0.8"
dirs = "6.0.0"
env_logger = "0.11.6"
include_dir = "0.7.3"
lazy-regex = "3.0.1"
lazy_static = "1.4.0"
lemmeknow = "0.8.0"
log = "0.4"
memmap2 = "0.9.0"
num = "0.4"
once_cell = "1.18.0"
proc-macro2 = "1.0.94" # Required due to https://github.com/rust-lang/rust/issues/113152
rayon = "1.7.0"
regex = "1.9.1"
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
text_io = "0.1.12"
toml = "0.8.10"
gibberish-or-not = "5.0.4"
cipher_identifier = "0.2.0"
rand = "0.9.0"  # For generating random values
colored = "3.0.0"
human-panic = "2.0.2"

# Dependencies used for decoding
base64 = "0.22.1"
base65536 = "1.0.1"
base91 = "0.1.0"
bs58 = "0.5.0"
data-encoding = "2.4.0"
urlencoding = "2.1.3"
z85 = "3.0.5"
brainfuck-exe = { version = "0.2.4", default-features = false }

# Dev dependencies
[dev-dependencies]
cargo-nextest = "0.9.92"
criterion = "0.5.1"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[[bench]]
name = "benchmark_crackers"
harness = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
